--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,15 @@
             <table>
                 <tr>
                     <td><label>Name: </label></td>
-                    <td><input type="text" ></td>
+                    <td><input type="text" name="name"></td>
                 </tr>
                 <tr>
                     <td><label>Email: </label></td>
-                    <td><input type="email"></td>
+                    <td><input type="email" name="email"></td>
                 </tr>
                 <tr>
                     <td><label>Phone Number: </label></td>
-                    <td><input type="tel"></td>
+                    <td><input type="tel" name="phone_number"></td>
                 </tr>
             </table>
             <textarea cols="30" rows="10">Write Your Query</textarea>
